--- a/package.json
+++ b/package.json
@@ -5,10 +5,15 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:all": "concurrently \"npm run dev\" \"npm run server\"",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "server": "npm"
+    "server": "cd server && npm run dev",
+    "test": "playwright test",
+    "test:ui": "playwright test --ui",
+    "test:debug": "playwright test --debug",
+    "test:coverage": "playwright test --coverage"
   },
   "dependencies": {
     "react": "^19.0.0",
@@ -19,10 +24,14 @@
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@hookform/devtools": "^4.4.0",
+    "@playwright/test": "^1.42.1",
+    "@types/dotenv": "^6.1.1",
     "@types/node": "^22.14.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
+    "concurrently": "^9.1.2",
+    "dotenv": "^16.5.0",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
